--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier -w ."
   },
   "eslintConfig": {
     "extends": [
@@ -42,15 +43,9 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.28.1",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "@types/ol": "^6.5.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4",
-    "prettier": "^2.3.2"
+    "prettier": "2.3.2"
   }
 }
